# module-deprecate

./: CHANGELOG.md  README.md  flake.nix  hie.yaml  module-deprecate.cabal
app/: Main.hs
src/: Deprecated.hs  LibBad.hs  LibGood.hs
