cabal-version:      2.4
name:               module-deprecate
version:            0.1
license:            MIT
license-file:       LICENSE
copyright:          2023 Thomas Bidne
author:             Thomas Bidne
maintainer:         tbidne@protonmail.com
homepage:           https://github.com/tbidne/module-deprecate/
bug-reports:        https://github.com/tbidne/module-deprecate/issues
extra-source-files:
  CHANGELOG.md
  README.md

source-repository head
  type:     git
  location: https://github.com/tbidne/module-deprecate

library
  exposed-modules:
    Deprecated
    LibBad
    LibGood

  build-depends:    base ^>=4.18.0.0
  hs-source-dirs:   src
  default-language: Haskell2010

executable module-deprecate
  main-is:          Main.hs
  build-depends:
    , base
    , module-deprecate

  hs-source-dirs:   app
  ghc-options:      -threaded -with-rtsopts=-N
  default-language: Haskell2010
